--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ a {
 button {
     background-color: #3882f6;
     color: white;
+    border-radius: 20%;
 }
 
 .cards-title {
@@ -50,14 +51,11 @@ button {
     color: #1f2937;
 }
 
-
 img {
     width: 100px;
     border-radius: 20%;
     border: 2px solid #3882f6;
 }
-
-
 
 .quote {
     background-color: #e5e7eb;
