--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
+    justify-content: stretch;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', 'Times New Roman', Times, serif;
@@ -18,6 +19,7 @@ p {
 .logo {
     color: white;
     font-size: 24px;
+    font-weight: 900;
 }
 
 .main-title {
@@ -41,7 +43,14 @@ a {
 button {
     background-color: #3882f6;
     color: white;
-    border-radius: 20%;
+    font-weight: 900;
+    border-radius: 15%;
+    margin: 0;
+    padding-right: 25px;
+    padding-left: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;    
 }
 
 .cards-title {
@@ -51,7 +60,11 @@ button {
     color: #1f2937;
 }
 
-img {
+.cards-place {
+    display: flex;
+}
+
+.cards img {
     width: 100px;
     border-radius: 20%;
     border: 2px solid #3882f6;
@@ -66,11 +79,22 @@ img {
     font-style: italic;
 }
 
+.call-banner-space {
+    display: flex;
+    justify-content: center;
+}
+
 .call-banner {
     background-color: #3882f6;
+    margin: 50px;
 }
 
 .quote-signature {
     font-weight: 900;
 }
 
+.footer {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
