--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ button {
     background-color: #3882f6;
     color: white;
     font-weight: 900;
-    border-radius: 12%;
+    border-radius: 5px;
     margin: 0;
     width: 100px;
     height: 25px;
@@ -94,19 +94,21 @@ button {
     flex-basis: 140px;
     flex-wrap: wrap;
     margin: 20px;
+
 }
 
 .cards img {
     display: flex;
     width: 140px;
     height: 140px;
-    border-radius: 10%;
+    border-radius: 15px;
     border: 3px solid #3882f6;
+    box-shadow: 2px 3px 5px grey;
 }
 
 .cards p {
     text-align: center;
-
+    margin-top: 5px;
 }
 
 .quote {
@@ -115,21 +117,22 @@ button {
     flex-direction: column;
     flex-basis: 200px;
     justify-content: center;
+    padding: 0px 150px;
     }
 
 .actual-quote {
     font-size: 30px;
     font-style: italic;
+    text-align: center;
     }
 
 .quote-signature {
     font-weight: 900;
+    text-align: end;
 }
 
 .call-banner-space {
     display: flex;
-    justify-content: center;
-    border-radius: 20%;
 }
 
 .call-banner {
@@ -137,10 +140,11 @@ button {
     justify-content: center;
     align-items: center;
     background-color: #3882f6;
-    margin: 50px;
     color: white;
-    flex-basis: 900px;
-    height: 100px;
+    flex: 1;
+    height: 150px;
+    border-radius: 10px;
+    margin: 50px 150px;
 }
 
 .call-time {
